# 3D-Tracking-of-a-Single-Drone

./: .gitignore  README.md  main.py  pyproject.toml
src/: 3d_visualisation.py  camera.py  drone_detection.py  fusion.py  kalman_filter.py  path_route.py  window.py
